@@ -1714,6 +1714,22 @@ public class CompactionManager implements CompactionManagerMBean
         validationExecutor.setMaximumPoolSize(number);
     }
 
+    @Override
+    public void setEnableAggressiveGCCompaction(boolean enable)
+    {
+        if (enable)
+            logger.info("Enabling aggressive GC compaction");
+        else
+            logger.info("Disabling aggressive GC compaction");
+        DatabaseDescriptor.setEnableAggressiveGCCompaction(enable);
+    }
+
+    @Override
+    public boolean getEnableAggressiveGCCompaction()
+    {
+        return DatabaseDescriptor.getEnableAggressiveGCCompaction();
+    }
+
     /**
      * Try to stop all of the compactions for given ColumnFamilies.
      *
