@@ -2,6 +2,7 @@
  * <rdar://problem/20654491> Cass: Implement CASSANDRA-7715
  * <rdar://problem/26449278> Cass: don't block gossip stage during bounce when using sync commitlog
  * Fix Unit tests
+ * <rdar://problem/25376022> Cass: can we clean up deleted data on content quicker? (Aggressive GC LCS)
 
 
 3.0.6
